// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with emplty array 1`] = `
<div
  className="content-container__add"
>
  <div
    className="list-header"
  >
    <div
      className="see-on-mobile"
    >
      Payments
    </div>
    <div
      className="see-on-desktop"
    >
      Bill & Date
    </div>
    <div
      className="see-on-desktop"
    >
      Value
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item__message"
    >
      <span>
        No payments to worry about!
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container__add"
>
  <div
    className="list-header"
  >
    <div
      className="see-on-mobile"
    >
      Payments
    </div>
    <div
      className="see-on-desktop"
    >
      Bill & Date
    </div>
    <div
      className="see-on-desktop"
    >
      Value
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
